[package]
name = "tetra"
version = "0.1.0"
authors = ["djmittens <niksgamin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = "0.8.1"
specs = "0.16.1"
specs-derive = "0.4.1"
log = "0.4.11"
env_logger = "0.7.1"